Opened 19 years ago

Closed 17 years ago

Last modified 17 years ago

#361 closed bug (fixed)

[Tracker] wrong scrollbar alignment

Reported by: diver Owned by: aldeck
Priority: normal Milestone: R1
Component: Applications/Tracker Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by axeld)

Open Home folder from desktop ad press alt+1 (icon view) you will see that horizontal scrollbar wrongly aligned.

Change History (10)

comment:1 by korli, 19 years ago

bug_group: developers

comment:2 by diver, 19 years ago

Summary: [Tracker] wrong scrollbar alignment [Tracker] wrong scrollbar alignment

It's still here in hrev18486.

comment:3 by axeld, 18 years ago

Component: ApplicationsApplications/Tracker
Description: modified (diff)
Platform: All

comment:4 by diver, 17 years ago

Still here...

comment:5 by jackburton, 17 years ago

Could this have been fixed in hrev25559 ?

comment:6 by diver, 17 years ago

Not realy, just tested and alignment is still wrong.

comment:7 by aldeck, 17 years ago

Owner: changed from axeld to aldeck
Status: newassigned

After two days of diving into the Tracker and its PoseView beast, i just found the problem (and another one) Working on a solution :)

comment:8 by aldeck, 17 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev25896

comment:9 by diver, 17 years ago

Now horisontal scrollbar have unneeded offset, should I open another ticket for this?

comment:10 by aldeck, 17 years ago

You're right, i'm working on it, so i don't know if a new ticket is really needed, although it wouldn't do any harm. See also #1263 for some recent discussion about it.

Well, after a second thought, i'll just create a new ticket, that's cleaner.

Thanks for all the testing!

Note: See TracTickets for help on using tickets.